ipc/ipdl/test/ipdl/error/trans_WrongName5.ipdl
intr protocol trans_WrongName5 {

parent:
    intr Msg();
    async __delete__();

state S1:
    recv Msg goto S1;
    recv __delete__;
};
